# ChannelAttribution

./: .gitignore  README.md
ChannelAttribution/: LICENSE.txt  PKG-INFO  setup.cfg  setup.py
ChannelAttribution/src/cypack/: ChannelAttribution.cpp  ChannelAttribution.pyx  functions.cpp  functions.h  main.py
ChannelAttribution/src/cypack/docs/: ChannelAttribution.py  conf.py
ChannelAttribution/src/cypack/docs/_build/doctrees/: environment.pickle
ChannelAttribution/src/cypack/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
ChannelAttribution/src/cypack/docs/_build/html/_modules/: ChannelAttribution.html  index.html
ChannelAttribution/src/cypack/docs/_build/rinoh/: channelattribution.rtc  channelattribution.stylelog
ChannelAttribution/src/cypack/docs/_build/rinoh/.doctrees/: environment.pickle  index.doctree
R/: DESCRIPTION
R/man/: ChannelAttribution-package.Rd
python/: LICENSE.txt  MANIFEST.in  PKG-INFO  README.md  requirements.txt  setup.cfg  setup.py
python/src/cypack/: ChannelAttribution.cpp  ChannelAttribution.pyx  __init__.py  functions.cpp  functions.h  generate_doc.py
python/src/cypack/armadillo-9.860.2/: NOTICE.txt  README.md
python/src/cypack/data/: Data.csv
python/src/cypack/docs/: ChannelAttribution.py  conf.py
python/src/cypack/docs/_build/doctrees/: environment.pickle  index.doctree
python/src/cypack/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
python/src/cypack/docs/_build/html/_modules/: ChannelAttribution.html  index.html
python/src/cypack/docs/_build/html/_sources/: index.rst.txt
python/src/cypack/docs/_build/rinoh/: channelattribution.rtc  channelattribution.stylelog
python/src/cypack/docs/_build/rinoh/.doctrees/: environment.pickle  index.doctree
website/: README.md  docusaurus.config.js  sidebars.js
website/docs/: contactus.md  data.md  documentation_py.md  documentation_r.md  gettingstarted.md  installation_py.md  installation_r.md  python.md  rcran.md  roadmap.md  supportus.md
website/docs/old/: auto_markov_model.md  choose_order.md  heuristic_models.md  markov_model_mp.md
website/src/pages/: index.js
