[metadata]
name = ChannelAttribution
version = 2.0.1
description = Markov Model for the Online Multi-Channel Attribution Problem
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
author = Davide Altomare, David Loris
author_email = davide.altomare@gmail.com, david.loris@gmail.com
url = http://www.channelattribution.net
download_urls = https://pypi.org/project/ChannelAttribution
project_urls = 
	Documentation = http://www.channelattribution.net
	Code = https://github.com/DavideAltomare/ChannelAttribution
	Issue tracker = https://github.com/DavideAltomare/ChannelAttribution/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Mathematics
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: C++
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
python_requires = >=3.4
package_dir = =src
packages = find:

[options.packages.find]
where = src

[options.package_data]
* = *.pxd, *.h
cypack = data/*

[egg_info]
tag_build = 
tag_date = 0

